--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+description: Site desenvolvido para mostrar o funcionamento do NPC.
 remote_theme: pages-themes/Midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
